--- a/smart-cart/package.json
+++ b/smart-cart/package.json
@@ -18,6 +18,7 @@
     "react-fetch-hook": "^1.8.5",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
+    "use-http": "^1.0.26",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
